--- a/4.1/4.1.html
+++ b/4.1/4.1.html
@@ -7,7 +7,11 @@
   </head>
   <body>
     <script src="sketch.js"></script>
-    
-<h1>EX 4.0</h1>
-<a href="4.1/4.1.html">EX 4.1</a>
+    <script src="player.js"></script>
+    <script src="coins.js"></script>
+
+    <h1>EX 4.1</h1>
+
+
+
 </body></html>
