added 4.2 posenet sketch

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <script src="sketch.js"></script>
-    
+
 <h1>EX 4.0</h1>
 <a href="4.1/4.1.html">EX 4.1</a>
+<a href="4.2/4.2.html">EX 4.2 Posenet Sketch</a>
 </body></html>
