--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
 <h1>EX 4.0</h1>
 <a href="4.1/4.1.html">EX 4.1</a>
 <a href="4.2/4.2.html">EX 4.2 Posenet Sketch</a>
+<a href="4.3/4.3.html">EX 4.3 GIPHY API Sketch</a>
 </body></html>
